Frontend/todoapp-fe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-fe-depl
  labels:
    app: todoapp-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-fe
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: todoapp-fe
        tier: frontend
        track: stable
    spec:
      containers:
      - name: todoapp-fe
        image: todoapp-fe:1.0
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
