Frontend/todoapp-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-fe-service
spec:
  selector:
    app: todoapp-fe
    tier: frontend
  type: LoadBalancer
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
