Frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: todoapp.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-fe-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todoapp-be-service
                port:
                  number: 80
